--- a/index.html
+++ b/index.html
@@ -10,32 +10,33 @@
 
 <body>
     <div class="calculator">
+        <h1>Scientific Calculator</h1>
         <input type="text" id="display" readonly>
         <div class="buttons">
-            <button onclick="clearDisplay()">C</button>
-            <button onclick="deleteChar()">DEL</button>
-            <button onclick="appendToDisplay('(')">(</button>
-            <button onclick="appendToDisplay(')')">)</button>
+            <button class="btn-clear" onclick="clearDisplay()">C</button>
+            <button class="btn-del" onclick="deleteChar()">DEL</button>
+            <button class="btn-function" onclick="appendToDisplay('(')">(</button>
+            <button class="btn-function" onclick="appendToDisplay(')')">)</button>
             <button onclick="appendToDisplay('7')">7</button>
             <button onclick="appendToDisplay('8')">8</button>
             <button onclick="appendToDisplay('9')">9</button>
-            <button onclick="appendToDisplay('/')">/</button>
+            <button class="btn-operator" onclick="appendToDisplay('/')">/</button>
             <button onclick="appendToDisplay('4')">4</button>
             <button onclick="appendToDisplay('5')">5</button>
             <button onclick="appendToDisplay('6')">6</button>
-            <button onclick="appendToDisplay('*')">*</button>
+            <button class="btn-operator" onclick="appendToDisplay('*')">*</button>
             <button onclick="appendToDisplay('1')">1</button>
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
-            <button onclick="appendToDisplay('-')">-</button>
+            <button class="btn-operator" onclick="appendToDisplay('-')">-</button>
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="appendToDisplay('+')">+</button>
-            <button onclick="calculateResult()">=</button>
-            <button onclick="appendToDisplay('sin(')">sin</button>
-            <button onclick="appendToDisplay('cos(')">cos</button>
-            <button onclick="appendToDisplay('tan(')">tan</button>
-            <button onclick="appendToDisplay('log(')">log</button>
+            <button class="btn-operator" onclick="appendToDisplay('+')">+</button>
+            <button class="btn-equal" onclick="calculateResult()">=</button>
+            <button class="btn-function" onclick="appendToDisplay('sin(')">sin</button>
+            <button class="btn-function" onclick="appendToDisplay('cos(')">cos</button>
+            <button class="btn-function" onclick="appendToDisplay('tan(')">tan</button>
+            <button class="btn-function" onclick="appendToDisplay('log(')">log</button>
         </div>
     </div>
     <script src="script.js"></script>
